misc error handling cleanups; remove use of custom exception in a few places; move validation to construtors;